fix game jam width on mobile

--- a/src/styles/game-jams.scss
+++ b/src/styles/game-jams.scss
@@ -66,6 +66,7 @@
 		padding: 0 0vw;
 		row-gap: 0;
 		margin-bottom: 0;
+		width: 100%;
 	}
 
 	.jam {
